# fast_zero

./: pyproject.toml
src/fast_zero/: app.py  schema.py
tests/: test_app.py
